contrast correction banner

--- a/assets/europcom.scss
+++ b/assets/europcom.scss
@@ -225,7 +225,7 @@ header#title {
 }
 
 .highlight {
-  color: var(--color-6);
+  color: #9f0113;
 }
 
 #about-container {
